# graph

./: .coveragerc  Dockerfile  Makefile  pyproject.toml  tox.ini
.github/workflows/: main.yml  pull_requests.yml  release.yml
ansible/: deploy.yml
src/graph/: __init__.py  __main__.py  app.py  events.py  logging.py  settings.py
src/graph/cli/: server.py
src/graph/web/: schema.py
src/graph/web/definitions/: __init__.py
